# comment-extract

./: .gitignore  .pylintrc  LICENSE  README.md  __main__.py  __main___.py  __main___1.py  comment_extract.py  config.EXAMPLE.toml  config.SAMPLE.toml  config.toml  docx_dataclasses.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
comment_extract/: write_xlsx.py
comment_extract/docx_xml/: __init__.py  docx_aliases.py  docx_styles.py  docx_xml.py  ooxml_ns.py
comments_section/: adapter.py  comment_record.py  docx_to_xlsx.py  docx_xlsx_adapter.py  filenameparser.py  get_comments.py  public_record.py  retrieve_comments.py  write_xlsx.py  xl_comment.py
config/: toml_config.py
docx/: baseelement.py  document.py  docx.py  elements.py  filenameparser.py  ooxml_ns.py  requirements.txt  scratch.ipynb
docx/comments/: comment.py  comment_data.py  comment_data_backup.py  comments.py  comments_doc copy.py  comments_doc.py  comments_ext.py  comments_xml.py
docx/elements/: attrib.py  bubble.py  element_base.py  element_maker.py  elements.py  paragraph.py  paragraph_backup.py  paragraph_group.py  paragraph_group_backup.py  prop_decode.py  properties.py  run.py
docx/notes/: endnotes.py  footnotes.py  note.py  note_element.py  notes.py
docx/styles/: style.py  style_element.py  styles.py
logger/: logger.py
tests/: 100-LoremIpsum.docx  101-LoremIpsum2.docx  102-LoremIpsum3.docx  103-LoremIpsum4.docx  104-LoremIpsum5.docx  105-LoremIpsum6.docx  test.py
(+13 files in other folders)
