[project]
authors = [
  {name = "Daniel Sloat", email = "daniel.sloat@arb.ca.gov"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "XlsxWriter",
  "docx-comments @ git+https://github.com/djsloat/docx_comments",
]
description = "Extract comments from DOCX into XLSX spreadsheet."
license = {file = "LICENSE"}
name = "comment-extract"
readme = "README.md"
requires-python = ">=3.11"
version = "2024.01.08"

[project.optional-dependencies]
dev = [
  "black",
  "ipykernel",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=62.0.0", "wheel"]
